--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "typeRoots":[
+     "./typings",
+     "./node_modules/@types/"],
     "target": "es5",
     "lib": [
       "dom",
@@ -17,10 +20,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noImplicitAny": false,
     "jsx": "react-jsx"
   },
   "include": [
     "src"
   ]
+  
 }
