--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "firebase": "^8.7.1",
     "firebase-tools": "^9.16.0",
+    "jscrambler-webpack-plugin": "^5.5.32",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
